[package]
name = "actix-web-app"
version = "0.1.0"
authors = ["Grigorii Efimov <grinefimov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-rt = "1.1.1"
env_logger = "0.7.1"
failure = "0.1.8"
