[package]
name = "actix-web-app"
version = "0.1.0"
authors = ["Grigorii Efimov <grinefimov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.24.1"
features = ["bundled"]

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
serde = "1.0.116"
